<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>Cucumber_Selenium</groupId>
	<artifactId>Cucumber_Selenium</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<packaging>jar</packaging>
	<name>Cucumber_Selenium</name>
	<url>http://maven.apache.org</url>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		
		<maven.compiler.source>1.5</maven.compiler.source>
		<maven.compiler.target>1.5</maven.compiler.target>
		<jacoco.version>0.7.5.201505241946</jacoco.version>
		<jacoco.classDumpDir>${project.build.directory}/classdumps</jacoco.classDumpDir>

		<sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
		<sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
		<sonar.jacoco.reportPaths>target/jacoco.exec</sonar.jacoco.reportPaths>
		<sonar.language>java</sonar.language>		

		<sonar.surefire.reportsPath>target/surefire-reports</sonar.surefire.reportsPath>
		<sonar.binaries>target/classes</sonar.binaries>
		<sonar.coverage.jacoco.xmlReportPaths>target/jacoco/jacoco-ut</sonar.coverage.jacoco.xmlReportPaths>
		
		<!-- 
		<sonar.tests>junit</sonar.tests>
		<jacoco.agent.argLine>-Xms256m -Xmx1524m -XX:MaxPermSize=256m -Duser.language=en</jacoco.agent.argLine>

		<sonar.binaries>target/test-classes</sonar.binaries>
		<sonar.jacoco.reportPath>target</sonar.jacoco.reportPath>
		<sonar.coverage.jacoco.xmlReportPaths>jacoco/jacoco-ut</sonar.coverage.jacoco.xmlReportPaths>
		<sonar.sources>src</sonar.sources>
		<sonar.tests>junit</sonar.tests>
		<sonar.junit.reportsPath>target/cucumber-reports</sonar.junit.reportsPath>
		-->	
	</properties>

	<dependencies>
		<dependency>
			<groupId>org.seleniumhq.selenium</groupId>
			<artifactId>selenium-java</artifactId>
			<version>3.7.1</version>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.12</version>
			<scope>test</scope>
		</dependency>


		
		<dependency>
			<groupId>info.cukes</groupId>
			<artifactId>cucumber-java</artifactId>
			<version>1.2.5</version>
		</dependency>
		<dependency>
			<groupId>info.cukes</groupId>
			<artifactId>cucumber-jvm-deps</artifactId>
			<version>1.0.5</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>info.cukes</groupId>
			<artifactId>cucumber-junit</artifactId>
			<version>1.2.5</version>
			<scope>test</scope>
		</dependency>

		
		<dependency>
		    <groupId>com.vimalselvam</groupId>
		    <artifactId>cucumber-extentsreport</artifactId>
		    <version>3.0.2</version>
	   	</dependency>
	
	    <dependency>
		    <groupId>com.aventstack</groupId>
		    <artifactId>extentreports</artifactId>
		    <version>3.1.2</version>
	   	</dependency>
   	
	</dependencies> 
	
	<build>
		<!--
		<directory>target</directory>
		<outputDirectory>classes</outputDirectory>
		<testOutputDirectory>test-classes</testOutputDirectory>
		<sourceDirectory>src/main/java</sourceDirectory>
		<scriptSourceDirectory>src/main/scripts</scriptSourceDirectory>
		<testSourceDirectory>src/test/java</testSourceDirectory>
		-->
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<!--<version>3.6.1</version> -->
				<version>3.8.0</version>
				<configuration>
				<!--<skipMain>true</skipMain>
					<skip>true</skip>  -->
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<version>0.7.5.201505241946</version>
				<!-- <version>0.8.3</version> -->
				<executions>
					<execution>
						<!-- <id>prepare-agent</id> -->
						<id>pre-unit-test</id>
						<goals>
							<goal>prepare-agent</goal>
						</goals>
						
						<configuration>
							<destFile>target/jacoco.exec</destFile>
							<!--
								Sets the name of the property containing the settings
								for JaCoCo runtime agent.
							<propertyName>surefireArgLine</propertyName>
							
							<propertyName>${jacoco.agent.argLine}</propertyName>
							-->
						</configuration>
						
					</execution>

					<execution>
						<id>default-report</id>
						<goals>
							<goal>report</goal>
						</goals>
					</execution>

					<!--
					-->
					<execution>
						<id>post-unit-test</id>
						<phase>test</phase>
						<goals>
							<goal>report</goal>
						</goals>
						<configuration>
							<!-- Sets the path to the file which contains the execution data. -->
							<dataFile>target/jacoco.exec</dataFile>
							<!-- Sets the output directory for the code coverage report. -->
							<outputDirectory>target/jacoco/jacoco-ut</outputDirectory>

							<!-- <destFile>target/jacoco/jacoco.exec</destFile> -->
							<append>true</append>

						</configuration>
					</execution>
				</executions>
				<!--
				<configuration>
					<systemPropertyVariables>
						<jacoco-agent.destfile>target/jacoco/jacoco.exec</jacoco-agent.destfile>
					</systemPropertyVariables>
				</configuration>
				-->
			</plugin>
			
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-checkstyle-plugin</artifactId>
				<version>2.17</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.22.1</version>
				<configuration>
					<!-- Sets the VM argument line used when unit tests are run. -->
					
					<!-- <argLine>${surefireArgLine}</argLine>
					<argLine>${jacoco.agent.argLine}</argLine> -->
					<reportsDirectory>target/surefire-reports</reportsDirectory>
					<skipTests>false</skipTests>
					<includes>
						<include>**/*.java</include>
					</includes>
					
				</configuration>
			</plugin>			
		
		</plugins>
	</build>
	
	
	
</project>